fix: Term alignement on mobile – fix #11

--- a/assets/zazuko/home-layout.scss
+++ b/assets/zazuko/home-layout.scss
@@ -93,7 +93,7 @@
           outline: 0;
           border-color: $color-secondary;
           box-shadow: inset 0 0 0 2px $color-secondary;
-          z-index: 1;
+          z-index: 2;
         }
       }
 
